cmake_minimum_required(VERSION 3.7)
project(faster-rcnn-for-vehicle)
find_package(OpenCV)
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 11)
add_executable(yolo_detection yolo_object_detection.cpp)
add_executable(faster-rcnn-detection faster_rcnn.cpp)
target_link_libraries(yolo_detection ${OpenCV_LIBS})
target_link_libraries(faster-rcnn-detection ${OpenCV_LIBS})