cmake_minimum_required(VERSION 3.7)
set( CMAKE_BUILD_TYPE "Release" )
#set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
#set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
project(faster-rcnn-for-vehicle)
find_package(OpenCV)
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 11)
add_executable(yolo_darknet_detection yolo_object_detection.cpp)
add_executable(yolo_caffe_detection yolo_caffe_model.cpp)
target_link_libraries(yolo_darknet_detection ${OpenCV_LIBS})
target_link_libraries(yolo_caffe_detection ${OpenCV_LIBS})